[package]
name = "kernelspace"
version = "0.1.0"
edition = "2018"

[dependencies]
cty = "0.2"
redbpf-macros = "1.3"
redbpf-probes = "1.3"

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false }

[dev-dependencies]
proptest = "1.0"

[features]
default = []
probes = []
std = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "probe"
path = "src/probe/main.rs"
required-features = ["probes"]
