[package]
name = "userspace"
version = "0.1.0"
edition = "2018"

[build-dependencies]
cargo-bpf = { version = "1.3", default-features = false, features = ["build"] }

[dependencies]
cty = "0.2"
redbpf = { version = "1.3", features = ["load"] }
tokio = { version = "^1.0.1", features = ["rt", "signal", "time", "io-util", "macros", "net", "sync"] }
futures = { version = "0.3" }

kernelspace = { path = "../kernelspace/", features = ["std"] }
bytes = "1.0.1"
clap = "2.33.3"

[[bin]]
name = "userspace"
path = "src/main.rs"
